Fix chat message alignment
Resulting from previous fix.
Solved by using different classname

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -124,6 +124,9 @@ p {
   position: relative;
   color: white;
   text-align: center;
+}
+
+p.sign-in-message {
   margin: 0 auto;
 }
 
